--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "pcb/random-keyboard-parts.pretty"]
 	path = pcb/random-keyboard-parts.pretty
 	url = https://github.com/ai03-2725/random-keyboard-parts.pretty
+[submodule "pcb/keyboard_parts.pretty"]
+	path = pcb/keyboard_parts.pretty
+	url = https://github.com/tmk/keyboard_parts.pretty
+[submodule "pcb/kicad_lib_tmk"]
+	path = pcb/kicad_lib_tmk
+	url = https://github.com/tmk/kicad_lib_tmk
+[submodule "pcb/KiCad-SSD1306-128x64"]
+	path = pcb/KiCad-SSD1306-128x64
+	url = https://github.com/pforrmi/KiCad-SSD1306-128x64
